# app/Http/Controllers/MovementController.php
@@ -2,13 +2,11 @@
 
 namespace App\Http\Controllers;
 set_time_limit(0);
-
 use App\Jobs\BackwardJob;
 use App\Jobs\ExitJob;
 use App\Jobs\ForwardJob;
 use App\Jobs\RunJob;
 use App\Jobs\StopJob;
-use App\Traits\MicroserviceTrait;
 use Bugsnag\BugsnagLaravel\Facades\Bugsnag;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -17,12 +15,11 @@ use OpenApi\Annotations as OA;
 
 class MovementController extends Controller
 {
-    use MicroserviceTrait;
     /**
      * @OA\Post(
      *      path="/api/movements/run",
      *      operationId="run",
-     *      tags={"Movements"},
+     *      tags={"Movement"},
      *      summary="Run the car",
      *      description="Run the car forward",
      *      @OA\Response(response=200, description="successful operation"),
@@ -31,14 +28,23 @@ class MovementController extends Controller
      */
     public function run(Request $request): JsonResponse
     {
-        return $this->uri($request, env("MOVEMENT_API"));
+        try {
+            RunJob::dispatch([
+                'command' => "run",
+            ])->onQueue('run');
+
+            return response()->json("RUN", 200);
+        } catch (Exception $e) {
+
+            return response()->json($e->getMessage(), 500);
+        }
     }
 
     /**
      * @OA\Post(
      *      path="/api/movements/stop",
      *      operationId="stop",
-     *      tags={"Movements"},
+     *      tags={"Movement"},
      *      summary="Stop the car",
      *      description="Stop the car",
      *      @OA\Response(response=200, description="successful operation"),
@@ -47,14 +53,23 @@ class MovementController extends Controller
      */
     public function stop(Request $request): JsonResponse
     {
-        return $this->uri($request, env("MOVEMENT_API"));
+        try {
+            StopJob::dispatch([
+                'command' => "stop",
+            ])->onQueue('stop');
+
+            return response()->json("STOP", 200);
+        } catch (Exception $e) {
+
+            return response()->json($e->getMessage(), 500);
+        }
     }
 
     /**
-     * @OA\Post(
+     * @OA\Get(
      *      path="/api/movements/backward",
      *      operationId="backward",
-     *      tags={"Movements"},
+     *      tags={"Movement"},
      *      summary="backward the car",
      *      description="backward the car",
      *      @OA\Response(response=200, description="successful operation"),
@@ -63,14 +78,23 @@ class MovementController extends Controller
      */
     public function backward(Request $request): JsonResponse
     {
-        return $this->uri($request, env("MOVEMENT_API"));
+        try {
+            BackwardJob::dispatch([
+                'command' => "backward",
+            ])->onQueue('backward');
+
+            return response()->json("BACKWARD", 200);
+        } catch (Exception $e) {
+
+            return response()->json($e->getMessage(), 500);
+        }
     }
 
     /**
-     * @OA\Post(
+     * @OA\Get(
      *      path="/api/movements/forward",
      *      operationId="forward",
-     *      tags={"Movements"},
+     *      tags={"Movement"},
      *      summary="forward the car",
      *      description="forward the car",
      *      @OA\Response(response=200, description="successful operation"),
@@ -79,14 +103,23 @@ class MovementController extends Controller
      */
     public function forward(Request $request): JsonResponse
     {
-        return $this->uri($request, env("MOVEMENT_API"));
+        try {
+            ForwardJob::dispatch([
+                'command' => "forward",
+            ])->onQueue('forward');
+
+            return response()->json("FORWARD", 200);
+        } catch (Exception $e) {
+
+            return response()->json($e->getMessage(), 500);
+        }
     }
 
     /**
-     * @OA\Post(
+     * @OA\Get(
      *      path="/api/movements/exit",
      *      operationId="exit",
-     *      tags={"Movements"},
+     *      tags={"Movement"},
      *      summary="exit the car",
      *      description="exit the car",
      *      @OA\Response(response=200, description="successful operation"),
@@ -95,6 +128,15 @@ class MovementController extends Controller
      */
     public function exit(Request $request): JsonResponse
     {
-        return $this->uri($request, env("MOVEMENT_API"));
+        try {
+            ExitJob::dispatch([
+                'command' => "exit",
+            ])->onQueue('exit');
+
+            return response()->json("EXIT", 200);
+        } catch (Exception $e) {
+
+            return response()->json($e->getMessage(), 500);
+        }
     }
 }
